# mini-MineCraft

./: .gitignore  CMakeLists.txt  README.md
CG-Project/: CMakeLists.txt
CG-Project/src/: Cube.cpp  Cube.h  MapManager.cpp  MapManager.h  Texture.h  TextureAtlas.h  model.h  stb_image.cpp
CG-Project/src/shaders/: grass.fs
src/: Camera.h  Cube.cpp  Cube.h  MCdb.cpp  MCdb.h  MapManager.cpp  MapManager.h  MineCraft  RenderCube.h  Shader.h  Sky.cpp  Sky.h  main.cpp  mesh.h  model.cpp  model.h  noise.h
src/db/: Hash.cpp  Hash.h  MCdb.cpp  MCdb.h
src/glad/include/glad/: glad.h
src/glad/src/: glad.c
src/shaders/: grass.fs  grass.vs  skyShader.fs  skyShader.vs  soil.fs  soil.vs  transparent.fs  transparent.vs
